--- a/fastapi/app/templates/base/base.html
+++ b/fastapi/app/templates/base/base.html
@@ -6,9 +6,32 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link rel="shortcut icon" href="{{url_for('static', path='/img/search.ico')}}" type="image/x-icon">
+  <link rel="stylesheet" href="{{url_for('static', path='/css/styles.css')}}">
   <title>{% block title %}{% endblock %}</title>
 </head>
 <body class="mx-0 my-0">
-  {% block content %}{% endblock %}
+  {% if not_found %}
+    {% block page404 %}{% endblock %}
+  {% else %}
+  <div class="container">
+    <header>
+      <h2 class="mb-4 mt-4 text-center">
+        <img class="mb-1" src="{{url_for('static', path='/img/search.ico')}}" alt="">
+        Pubmed Article Search Site
+      </h2>
+    </header>
+    <main class="container__main">
+        <!-- Left sidebar -->
+        <aside class="container__left">
+          {% block facets %}{% endblock %}
+        </aside>
+
+        <!-- Main content -->
+        <article class="container__middle">
+          {% block content %}{% endblock %}
+        </article>
+    </main>
+  </div>
+  {% endif %}
 </body>
 </html>
