Finilized the project

--- a/fastapi/app/templates/base/base.html
+++ b/fastapi/app/templates/base/base.html
@@ -16,8 +16,8 @@
   <div class="container">
     <header>
       <h2 class="mb-4 mt-4 text-center">
-        <img class="mb-1" src="{{url_for('static', path='/img/search.ico')}}" alt="">
-        Pubmed Article Search Site
+
+        Pubmed Articles Search Site
       </h2>
     </header>
     <main class="container__main">
